--- a/doc/statistics.bib
+++ b/doc/statistics.bib
@@ -203,11 +203,11 @@ keywords = "Drug development "
   publisher={BioMed Central Ltd}
 }
 
-@book{rothman1998modern,
-  title={Modern Epidemiology},
-  author={Rothman, KJ and Greenland, S},
-  year={1998},
-  publisher={London: Lippincott Williams and Wilkins}
+@book{rothman2008modern,
+  title={Modern epidemiology},
+  author={Rothman, Kenneth J and Greenland, Sander and Lash, Timothy L},
+  year={2008},
+  publisher={Lippincott Williams \& Wilkins}
 }
 
 @book{rothman2002intro_epidemiology,
@@ -383,5 +383,25 @@ howpublished = {\url{http://on-demand.gputechconf.com/gtc/2013/presentations/S31
   year={2014}
 }
 
+@article{interaction_confusion,
+  title={Interaction: a word with two meanings creates confusion},
+  author={Ahlbom, Anders and Alfredsson, Lars},
+  journal={European journal of epidemiology},
+  volume={20},
+  number={7},
+  pages={563--564},
+  year={2005},
+  publisher={Springer}
+}
 
+@article{vanderweele2009sufficient,
+  title={Sufficient cause interactions and statistical interactions},
+  author={VanderWeele, Tyler J},
+  journal={Epidemiology},
+  volume={20},
+  number={1},
+  pages={6--13},
+  year={2009},
+  publisher={LWW}
+}
 
