--- a/doc/statistics.bib
+++ b/doc/statistics.bib
@@ -405,3 +405,12 @@ howpublished = {\url{http://on-demand.gputechconf.com/gtc/2013/presentations/S31
   publisher={LWW}
 }
 
+@book{lindgren1993statistical,
+  title={Statistical theory},
+  author={Lindgren, Bernard},
+  year={1993},
+  EDITION = {fourth},
+  publisher={CRC Press}
+}
+
+
