Updated report. Renamed CombinedResultsLr to LRCombinedResults.

--- a/doc/misc.bib
+++ b/doc/misc.bib
@@ -158,5 +158,26 @@
   publisher={Garland Science}
 }
 
+@misc{nvidia_nsight,
+  title={Nsight Eclipse Edition},
+  author={{NVIDIA}},
+  howpublished = {\url{https://developer.nvidia.com/nsight-eclipse-edition}}
+}
+
+@misc{cula_forum_q,
+  title={How do I set the CUDA Stream CULA uses?},
+  author={John},
+  howpublished = {\url{http://www.culatools.com/forums/viewtopic.php?f=14&t=1019}}
+}
+
+@misc{magma_stream,
+  title={MAGMA Documentation, function magmablasSetKernelStream},
+  author={},
+  howpublished = {\url{http://icl.cs.utk.edu/projectsfiles/magma/doxygen/group__magma__util.html#ga0bbe77c58765b97bf03f589c43cb7ac1}}
+}
+
+
+
+
 
 
