Changes to timers. Added syncing option. Lots of updates to report. Fixed error with tests

--- a/doc/misc.bib
+++ b/doc/misc.bib
@@ -176,8 +176,21 @@
   howpublished = {\url{http://icl.cs.utk.edu/projectsfiles/magma/doxygen/group__magma__util.html#ga0bbe77c58765b97bf03f589c43cb7ac1}}
 }
 
+@misc{smoking_teeth,
+  title={Smoking and Oral Health},
+  author={British Dental Health Foundation},
+  howpublished = {\url{https://www.dentalhealth.org/tell-me-about/topic/sundry/smoking-and-oral-health}}
+}
 
+@misc{zorn_pdc,
+  title={Zorn Cluster},
+  author={PDC},
+  howpublished = {\url{https://www.pdc.kth.se/resources/computers/zorn}}
+}
 
-
-
+@misc{plink_format,
+  title={PLINK Data Format},
+  author={},
+  howpublished = {\url{http://pngu.mgh.harvard.edu/~purcell/plink/data.shtml}}
+}
 
