Updated Configuration. Updated scripts. Updated report. Added plots. Improved profling

--- a/doc/statistics.bib
+++ b/doc/statistics.bib
@@ -413,4 +413,23 @@ howpublished = {\url{http://on-demand.gputechconf.com/gtc/2013/presentations/S31
   publisher={CRC Press}
 }
 
+@article{golub1970singular,
+  title={Singular value decomposition and least squares solutions},
+  author={Golub, Gene H and Reinsch, Christian},
+  journal={Numerische Mathematik},
+  volume={14},
+  number={5},
+  pages={403--420},
+  year={1970},
+  publisher={Springer}
+}
+
+@book{albert1972regression,
+  title={Regression and the Moore-Penrose pseudoinverse},
+  author={Albert, Arthur},
+  year={1972},
+  publisher={Elsevier}
+}
+
+
 
